--- a/rancher/nginx-deployment-sample.yml
+++ b/rancher/nginx-deployment-sample.yml
@@ -35,24 +35,26 @@ spec:
       targetPort: 80
 
 ---
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: wale-nginx-ingress
   namespace: wale-demo
   annotations:
-    kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
-
 spec:
+  ingressClassName: alb
   rules:
     - host: wale-demo-ranchercicd.whalecloud.awsps.myinstance.com
       http:
         paths:
-          - path: /*
-            backend:
-              serviceName: wale-nginx-service
-              servicePort: 8080
+        - path: /
+          pathType: Prefix
+          backend:
+            service:
+              name: wale-nginx-service
+              port:
+                number: 8080
 
 # kubectl get pods -l 'app=wale-nginx' -o wide | awk {'print $1" " $3 " " $6'} | column -t
