--- a/rancher/nginx-deployment-sample.yml
+++ b/rancher/nginx-deployment-sample.yml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deployment
+  name: wale-nginx-deployment
   labels:
     app: wale-nginx
 spec:
