--- a/rancher/nginx-deployment-sample.yml
+++ b/rancher/nginx-deployment-sample.yml
@@ -14,6 +14,13 @@ spec:
       labels:
         app: wale-nginx
     spec:
+      topologySpreadConstraints:
+      - maxSkew: 1 #distribute pods in an absolute even manner
+        topologyKey: topology.kubernetes.io/zone # the even distribution will only be applied to nodes that are labelled zone: <any value> (nodes that don't have a zone label are skipped).
+        whenUnsatisfiable: DoNotSchedule #tells the scheduler to let the incoming Pod stay pending if the scheduler can't find a way to satisfy the constraint.
+        labelSelector:  #only act on Pods that match this selector
+          matchLabels:
+            app: wale-nginx
       containers:
       - name: wale-nginx
         image: nginx:1.14.2
