added ssl to ingress

--- a/k8s-rancher-continuous-delivery/nginx-deployment-sample.yml
+++ b/k8s-rancher-continuous-delivery/nginx-deployment-sample.yml
@@ -1,9 +1,18 @@
-
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: "k8scd"
+  labels:
+    pod-security.kubernetes.io/audit: restricted
+    pod-security.kubernetes.io/enforce: restricted 
+    pod-security.kubernetes.io/warn: restricted    
+ 
 ---  
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: k8scd-nginx-deployment
+  namespace: k8scd
   labels:
     app: k8scd-nginx
 spec:
@@ -72,6 +81,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: k8scd-nginx-service
+  namespace: k8scd
 spec:
   selector:
     app: k8scd
@@ -86,15 +96,16 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: k8scd-nginx-ingress
+  namespace: k8scd
   annotations:
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
     alb.ingress.kubernetes.io/group.name: my-shared-ingress # to be used by multiple services. Edit ingress and delete finalizers to be able to delete the ingress, otherwise, it will hang.
     alb.ingress.kubernetes.io/tags: Auto-delete=no
     ## SSL Settings
-    # alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}, {"HTTP": 8080}, {"HTTPS": 8443}]'
-    # alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-1:XXXXXXXXXXXX:certificate/fcc58e38-dbf0-4f55-9d0e-955da11d2da0
-    # alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-2-Ext-2018-06 #Optional (Picks default if not used)
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}, {"HTTP": 8080}, {"HTTPS": 8443}]'
+    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-1:520817024429:certificate/fcc58e38-dbf0-4f55-9d0e-955da11d2da0
+    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-2-Ext-2018-06 #Optional (Picks default if not used)
 spec:
   ingressClassName: alb
   rules:
