--- a/aws-eks-argocd/python-web-app/k8s.yaml
+++ b/aws-eks-argocd/python-web-app/k8s.yaml
@@ -47,7 +47,7 @@ spec:
             memory: "128Mi"
             cpu: "500m"
         securityContext:
-          allowPrivilegeEscalation: false
+          allowPrivilegeEscalation: true
           readOnlyRootFilesystem: false
           capabilities:
             drop:
