--- a/aws-eks-argocd/python-web-app/k8s.yaml
+++ b/aws-eks-argocd/python-web-app/k8s.yaml
@@ -30,7 +30,7 @@ spec:
     spec:
       dnsPolicy: Default # "Default" is not the true default value
       enableServiceLinks: false    # Disable service discovery
-      automountServiceAccountToken: false
+      # automountServiceAccountToken: false
       # securityContext:
       #   seccompProfile:
       #     type: RuntimeDefault
