--- a/aws-eks-argocd/python-web-app/k8s.yaml
+++ b/aws-eks-argocd/python-web-app/k8s.yaml
@@ -29,13 +29,7 @@ spec:
         app: python-web-app
     spec:
       dnsPolicy: Default # "Default" is not the true default value
-      enableServiceLinks: false    # Disable service discovery
-      # automountServiceAccountToken: false
-      # securityContext:
-      #   seccompProfile:
-      #     type: RuntimeDefault
-      #   runAsNonRoot: true 
-      #   runAsUser: 5678       
+      enableServiceLinks: false    # Disable service discovery    
       containers:
       - image: berry2012/flask-app
         name: flask-app
@@ -45,13 +39,7 @@ spec:
            cpu: "250m"
           limits:
             memory: "128Mi"
-            cpu: "500m"
-        # securityContext:
-        #   allowPrivilegeEscalation: false
-        #   readOnlyRootFilesystem: true
-        #   capabilities:
-        #     drop:
-        #       - ALL           
+            cpu: "500m"         
         ports:
         - containerPort: 5000
         resources: {}
@@ -87,12 +75,12 @@ metadata:
     alb.ingress.kubernetes.io/tags: Auto-delete=no
     ## SSL Settings
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}, {"HTTP": 8080}, {"HTTPS": 8443}]'
-    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-1:520817024429:certificate/fcc58e38-dbf0-4f55-9d0e-955da11d2da0
+    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-1:520817024429:certificate/b668b17d-004d-4568-bf24-f4811174e9f2
     alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-2021-06 #Optional (Picks default if not used)    
 spec:
   ingressClassName: alb
   rules:
-    - host: flaskwebapp.whalecloud.awsps.myinstance.com
+    - host: flaskwebapp.eoalola.people.aws.dev
       http:
         paths:
         - path: /
